--- a/opensocial/client/client_templates/register.html
+++ b/opensocial/client/client_templates/register.html
@@ -20,23 +20,23 @@
     {{ form.hidden_tag() }}
     <div class="form-group">
         {{ form.first_name.label(class_="control-label") }}
-        {{ form.first_name(class_="form-control input-sm") }}
+        {{ form.first_name(class_="form-control") }}
     </div>
     <div class="form-group">
         {{ form.last_name.label(class_="control-label") }}
-        {{ form.last_name(class_="form-control input-sm") }}
+        {{ form.last_name(class_="form-control") }}
     </div>
     <div class="form-group">
         {{ form.email.label(class_="control-label") }}
-        {{ form.email(class_="form-control input-sm") }}
+        {{ form.email(class_="form-control") }}
     </div>
     <div class="form-group">
         {{ form.password.label(class_="control-label") }}
-        {{ form.password(class_="form-control input-sm") }}
+        {{ form.password(class_="form-control") }}
     </div>
     <div class="form-group">
         {{ form.gender.label(class_="control-label") }}
-        {{ form.gender(class_="form-control input-sm") }}
+        {{ form.gender(class_="form-control") }}
     </div>
     <div class="form-group">
         <div class="checkbox">
