--- a/opensocial/client/client_templates/login.html
+++ b/opensocial/client/client_templates/login.html
@@ -20,11 +20,11 @@
     {{ form.hidden_tag() }}
     <div class="form-group">
         {{ form.email.label(class_="control-label") }}
-        {{ form.email(class_="form-control input-sm") }}
+        {{ form.email(class_="form-control") }}
     </div>
     <div class="form-group">
         {{ form.password.label(class_="control-label") }}
-        {{ form.password(class_="form-control input-sm") }}
+        {{ form.password(class_="form-control") }}
     </div>
     <div class="form-group">
         <div class="checkbox">
